--- a/homeassistant/docker-compose.yml
+++ b/homeassistant/docker-compose.yml
@@ -1,11 +1,16 @@
-version: '3.5'
+version: "3"
 services:
   homeassistant:
-    container_name: homeassistant
-    image: "ghcr.io/home-assistant/home-assistant:stable"
-    volumes:
-      - /opt/homeassistant/config:/config
-      - /etc/localtime:/etc/localtime:ro
+    image: lscr.io/linuxserver/homeassistant
     restart: unless-stopped
-    privileged: true
-    network_mode: host
+    # network_mode: host
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/London
+    volumes:
+      - ./config:/config
+    ports:
+      - 8123:8123 #optional
+    # devices:
+    #   - /path/to/device:/path/to/device #optional
