--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -3,31 +3,40 @@ version: "3"
 services:
   nextcloud:
     image: nextcloud
-    hostname: cloud.yourdomain.tld
+    hostname: cloud.mattiacampagna.com
     restart: always
     environment:
       MYSQL_DATABASE: nextcloud
       MYSQL_USER: nextcloud
       MYSQL_PASSWORD: folletto
       MYSQL_HOST: db
+      # VIRTUAL_HOST: https://cloud.mattiacampagna.com
+      OVERWRITEPROTOCOL: https
     networks:
       - traefik
       - dbnet
-    ports:
-      - "8081:80"
+    # ports:
+    #  - "8087:80"
     links:
       - db
     volumes:
       - nextcloud:/var/www/html
     labels:
-      - traefik.enable=true
-      - traefik.port=80
-      - traefik.frontend.rule=Host:cloud.your-domain.tld
-      - traefik.docker.network=traefik_srv
-      - traefik.frontend.entryPoints=https
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.referrerPolicy=no-referrer
-
+      # - traefik.enable=true
+      # - traefik.port=80
+      # - traefik.frontend.rule=Host:cloud.your-domain.tld
+      # - traefik.docker.network=traefik_srv
+      # - traefik.frontend.entryPoints=https
+      # - traefik.frontend.headers.STSSeconds=315360000
+      # - traefik.frontend.headers.referrerPolicy=no-referrer
+      - "traefik.enable=true"
+      - "traefik.http.routers.nextcloud.rule=Host(`cloud.mattiacampagna.com`)"
+      - "traefik.http.routers.nextcloud.entrypoints=websecure"
+      # Uses the Host rule to define which certificate to issue
+      - "traefik.http.routers.nextcloud.tls.certresolver=myresolver"
+      - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
+      - "traefik.docker.network=traefik"
+      
   db:
     image: mariadb
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
