--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - ./config:/config
       - ../shared/tvseries:/data/tvshows
       - ../shared/movies:/data/movies
-    ports:
-      - 8096:8096
+    # ports:
+      # - 8096:8096
       # - 8920:8920 #optional
       # - 7359:7359/udp #optional
       # - 1900:1900/udp #optional
@@ -24,7 +24,7 @@ services:
       - "traefik.http.routers.jellyfin.entrypoints=websecure"
       # Uses the Host rule to define which certificate to issue
       - "traefik.http.routers.jellyfin.tls.certresolver=myresolver"
-      # - "traefik.http.services.jellyfin.loadbalancer.server.port=8096"
+      - "traefik.http.services.jellyfin.loadbalancer.server.port=8096"
     networks:
       - traefik
 
