--- a/transmission/docker-compose.yml
+++ b/transmission/docker-compose.yml
@@ -9,13 +9,9 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/London
-      # - TRANSMISSION_WEB_HOME=/combustion-release/ #optional
+      - TZ=Europe/Rome
       - USER=mattia #optional
       - PASS=folletto #optional
-      # - WHITELIST=iplist #optional
-      # - PEERPORT=peerport #optional
-      # - HOST_WHITELIST=dnsname list #optional
     volumes:
       - .data:/config
       - ../shared:/downloads 
