--- a/filebrowser/docker-compose.yml
+++ b/filebrowser/docker-compose.yml
@@ -2,10 +2,9 @@ version: "3"
 
 services:
   filebrowser:
-    build: .
-    # image: filebrowser/filebrowser
-    ports:
-      - 9001:80
+    image: filebrowser/filebrowser
+    # ports:
+    #   - 9001:80
     environment:
       - PUID=1000
       - PGID=1000
@@ -18,6 +17,7 @@ services:
       - "traefik.http.routers.filebrowser.entrypoints=websecure"
       # Uses the Host rule to define which certificate to issue
       - "traefik.http.routers.filebrowser.tls.certresolver=myresolver"
+      - "traefik.http.services.filebrowser.loadbalancer.server.port=80"
     networks:
       - traefik
 
