--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.3"
 services:
   traefik:
     build: .
-    # image: "traefik"
-    container_name: "traefik"
+    image: "traefik"
+    restart: unless-stopped
     command:
       - "--log.level=DEBUG"
       # Activate dashboard
